--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <head></head>
-<link rel="stylesheet" href="styles.css"/>
+<link rel="stylesheet" href="styles.css" />
 <title>agrovideos</title>
 </head>
 <HEADER>AGOVIDEOS</HEADER>
-
-
+<section></section>
+<div></div>
 <H1>Básico sobre Trator CASE Puma 140 !</H1>
 <P>CASE PUMA 140</P>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/I3iUGyJ2YZg?si=k6iLw-SBuYI9c_WN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-
+</div>
+<div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/I3iUGyJ2YZg?si=k6iLw-SBuYI9c_WN"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+</section>
 
 
 
