--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<head></head>
+<head lang="pt-br">
 <link rel="stylesheet" href="styles.css" />
 <title>agrovideos</title>
 </head>
 <HEADER>AGOVIDEOS</HEADER>
-<section></section>
-<div></div>
+<section>
+<div>
 <H1>Básico sobre Trator CASE Puma 140 !</H1>
 <P>CASE PUMA 140</P>
 </div>
