--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <HEADER>AGOVIDEOS</HEADER>
 <section>
-<div>
+<div class"camada-texto">
 <H1>Básico sobre Trator CASE Puma 140 !</H1>
 <P>CASE PUMA 140</P>
 </div>
