--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <HEADER>AGOVIDEOS</HEADER>
 <section>
 <div class"camada-texto">
-<H1>Básico sobre Trator CASE Puma 140 !</H1>
+<H1>Trator CASE Puma 140 !</H1>
 <P>CASE PUMA 140</P>
 </div>
 <div>
@@ -15,11 +15,14 @@
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 </section>
+<section>
+<h2>esplicação sobre a linha caseih</h2>
+<div></div>
 
 
 
 
-
+</section>
 
 
 
