--- a/index.html
+++ b/index.html
@@ -1,32 +1,40 @@
-<head lang="pt-br">
-<link rel="stylesheet" href="styles.css" />
-<title>agrovideos</title>
+<html lang="pt-BR">
+
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/I3iUGyJ2YZg?si=fa0hgAADsbAHCU8F" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <title>AGROVIDEOS</title>
 </head>
-<HEADER>AGOVIDEOS</HEADER>
-<section>
-<div class"camada-texto">
-<H1>Trator CASE Puma 140 !</H1>
-<P>CASE PUMA 140</P>
-</div>
-<div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/I3iUGyJ2YZg?si=k6iLw-SBuYI9c_WN"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>
-</section>
-<section>
-<h2>esplicação sobre a linha caseih</h2>
-<div><img:https://img.youtube.com/vi/Kwr4nHCidWQ/maxresdefault.jpg;
 
-</div>
+<body>
+    <header>AGROVIDEOS</header>
 
+    <section class="chamada">
+        <div class="chamada-texto">
+            <h1>Básico sobre Trator CASE Puma 140 !</h1>
+            <p> #trator #case</p>
+        </div>
 
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/VFrZzn2fyYs?si=NBDHhmFofQH3BUQr"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 
-</section>
+    <section class="categoria">
+        <h2>Sobre trator CASE</h2>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=I3iUGyJ2YZg">
+                <img src="https://img.youtube.com/vi/I3iUGyJ2YZg/maxresdefault.jpg" />
+            </a>
+        </div>
+    </section>
 
+</body>
 
-
-
-
-</bady>
+</html>
