--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
             <a href="https://www.youtube.com/watch?v=I3iUGyJ2YZg">
                 <img src="https://img.youtube.com/vi/I3iUGyJ2YZg/maxresdefault.jpg" />
             </a>
+            <a href="https://www.youtube.com/watch?v=Kwr4nHCidWQ">
+                <img src="https://img.youtube.com/vi/Kwr4nHCidWQ/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=Es9bfWQGXUk">
+                <img src="https://img.youtube.com/vi/Es9bfWQGXUk/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=I3iUGyJ2YZg">
+                <img src="https://img.youtube.com/vi/I3iUGyJ2YZg/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=I3iUGyJ2YZg">
+                <img src="https://img.youtube.com/vi/I3iUGyJ2YZg/maxresdefault.jpg" />
+            </a>
         </div>
     </section>
 
